# server

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  endpoints.md  versions.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/nextchat-communication/: Cargo.toml
crates/nextchat-communication/src/: connection.rs  incoming.rs  lib.rs  outgoing.rs  storage.rs
crates/nextchat-communication/src/incoming/: friend_request.rs
crates/nextchat-communication/tests/: messages.rs
crates/nextchat-database/: Cargo.toml
crates/nextchat-database/src/: lib.rs  models.rs
crates/nextchat-database/src/models/: friends.rs  users.rs
crates/nextchat-database/tests/: connection.rs
crates/nextchat-security/: Cargo.toml
crates/nextchat-security/src/: lib.rs
crates/nextchat-security/tests/: password.rs
crates/nextchat-server/: Cargo.toml
crates/nextchat-server/src/: controllers.rs  lib.rs
crates/nextchat-server/src/controllers/: connection.rs  friends.rs  users.rs  version_checker.rs
crates/nextchat-server/src/services/: connection.rs  friends.rs  users.rs  version_checker.rs
crates/nextchat-utils/: Cargo.toml
crates/nextchat-utils/src/: lib.rs  versions.rs
crates/nextchat-utils/src/versions/: all_versions.rs
migrations/v0.1.0-alpha1/: friends.sql  users.sql
src/: connection.rs  controllers.rs  core.rs  database.rs  handlers.rs  main.rs  models.rs  routes.rs  security.rs  services.rs  version.rs
src/controllers/: connection.rs  friends.rs  users.rs  version_checker.rs
src/core/: database.rs  response.rs  security.rs  storage.rs  versions.rs
src/core/versions/: all_versions.rs
src/database/: models.rs  user.rs
src/database/models/: friend.rs  user.rs
src/database/sqls/: friends.sql  users_table.sql
src/handlers/: friends.rs  users.rs  v1.rs  version_checker.rs  websockets.rs
src/handlers/v1/: users.rs  websockets.rs
src/handlers/v1/websockets/events/: mod.rs
src/handlers/websockets/: storage.rs
src/handlers/websockets/events/: mod.rs
src/models/: connection.rs  friends.rs  users.rs
src/routes/: users.rs
src/services/: connection.rs  friends.rs  users.rs  version_checker.rs
