[package]
name = "nextchat-server"
version = "0.1.0"
authors = ["NextChat contributors"]
edition = "2018"

[dependencies]
argonautica = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5.1", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
