[package]
name = "nextchat"
version = "0.1.0-alpha1"
readme = "README.md"
license = "GPL-2.0"
authors = ["NextChat contributors <contact@nextchat.org>"]
edition = "2018"

[workspace]
members = [
    "crates/nextchat-communication/",
    "crates/nextchat-database/",
    "crates/nextchat-security/",
    "crates/nextchat-server/",
    "crates/nextchat-utils/"
]

[dependencies]
colored = "2"
dotenv = "0.15"
nextchat-communication = { path = "./crates/nextchat-communication/", version = "0.1.0-alpha1" }
nextchat-database = { path = "./crates/nextchat-database/", version = "0.1.0-alpha1" }
nextchat-server = { path = "./crates/nextchat-server/", version = "0.1.0-alpha1" }
tokio = { version = "1", features = ["macros"] }
