[package]
name = "nextchat-utils"
version = "0.1.0-alpha1"
license = "GPL-2.0"
authors = ["NextChat contributors <contact@nextchat.org>"]
edition = "2018"

[dependencies]
nextchat-database = { path = "../nextchat-database/", version = "0.1.0-alpha1" }
semver = "0.11"
tokio = { version = "1", default-features = false, features = ["sync"] }
